# BRIAN-to-C-port

./: CMakeLists.txt  Data_Loading.ipynb  Makefile  Neurons_I.txt  README.md  Spikes.txt  array_A.txt  array_A_python.txt  check.sh  checkfytou.sh  connections.txt  neofytoutput1  neofytoutput2  neofytoutputC  neofytoutputPython  neuron.c  neuron.h  output  prepostSTDP_savings.py  simulation  simulation.c  spikespython.txt  synapse_code.c  synapses.c  synapses.h
MxM 10x10 allcon/: array_A.txt  array_A_python.txt
MxM 10x10 nallcon/: Neuron_I_python.txt  Spikes.txt  connections.txt
NxM 100x1 nallcon/: Neuron_I_python.txt  Spikes.txt  array_A.txt  array_A_python.txt  connections.txt  spikespython.txt
NxM 100x2 allcon/: Neuron_I_python.txt  array_A.txt
NxM 100x2 nallcon/: Neurons_I.txt  Spikes.txt  array_A.txt  array_A_python.txt  connections.txt  spikespython.txt
doc/: Doxyfile
doc/html/: README_8md.html  _formulas.tex  annotated.html  classes.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  md__home_ioannis_Desktop_Porting_README.html  neuron_8c.html  neuron_8c__incl.dot  neuron_8c__incl.md5  neuron_8h.html  neuron_8h__dep__incl.dot  neuron_8h__dep__incl.md5  neuron_8h_source.html  pages.html  simulation_8c.html  simulation_8c__incl.dot  simulation_8c__incl.md5  structNeuron-members.html  synapses_8c.html  (+14 more)
src/: constants.cpp  constants.hpp  neuron.cpp  neuron.hpp  simulation.cpp  synapses.cpp  synapses.hpp  util.cpp  util.hpp
test outputs/: neofytoutput3
(+36 files in other folders)
